# quake2-rerelease-dll

./: .gitignore  README.md  meson.build
actionlite/: CMakeCache.txt  CMakeLists.txt  Makefile  a_game.cpp  a_game.h  a_match.cpp  a_match.h  a_radio.cpp  a_radio.h  a_team.cpp  a_team.h  bg_local.h  cg_local.h  cg_main.cpp  cg_screen.cpp  cgf_sfx_glass.cpp  cgf_sfx_glass.h  g_ai.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_save.cpp  g_spawn.cpp  g_statusbar.h  g_svcmds.cpp  g_target.cpp  g_team.cpp  g_team.h  g_trigger.cpp  g_turret.cpp  g_utils.cpp  g_weapon.cpp  game.h  game.sln  (+47 more)
actionlite/action/: a_balancer.cpp  a_doorkick.cpp  a_game.cpp  a_game.h  a_radio.cpp  a_radio.h  a_team.cpp  a_team.h  a_xgame.cpp  a_xgame.h  cgf_sfx_glass.cpp  cgf_sfx_glass.h
actionlite/bots/: bot_debug.cpp  bot_exports.cpp  bot_exports.h  bot_includes.h  bot_think.h  bot_utils.cpp  bot_utils.h
actionlite/ctf/: g_ctf.cpp  g_ctf.h  p_ctf_menu.cpp
actionlite/example/: g_main.cpp
actionlite/rogue/: g_rogue_items.cpp  g_rogue_misc.cpp  g_rogue_newai.cpp  g_rogue_newdm.cpp  g_rogue_newfnc.cpp  g_rogue_newtarg.cpp  g_rogue_newweap.cpp  g_rogue_phys.cpp  g_rogue_spawn.cpp  g_rogue_sphere.cpp  m_rogue_carrier.cpp  m_rogue_carrier.h  m_rogue_stalker.cpp  m_rogue_stalker.h  m_rogue_turret.cpp  m_rogue_turret.h  m_rogue_widow.cpp  m_rogue_widow2.cpp  p_rogue_weapon.cpp  rogue_dm_ball.cpp  rogue_dm_tag.cpp
actionlite/xatrix/: g_xatrix_func.cpp  g_xatrix_items.cpp  g_xatrix_monster.cpp  g_xatrix_target.cpp  g_xatrix_weapon.cpp  m_xatrix_fixbot.cpp  m_xatrix_fixbot.h  m_xatrix_gekk.cpp  m_xatrix_gekk.h  p_xatrix_weapon.cpp
fgd/: Action.fgd  GameConfig.cfg  Quake2.fgd  ericw_tools.fgd  kexlights.fgd
original/ctf/: g_ctf.c  g_ctf.h  g_local.h  g_weapon.c  p_client.c  p_weapon.c
original/rogue/: dm_ball.c  dm_tag.c  g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_newai.c  g_newdm.c  g_newfnc.c  g_newtarg.c  g_newtrig.c  g_newweap.c  g_phys.c  g_save.c  g_spawn.c  g_sphere.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.dsp  game.h  game.plg  m_actor.c  m_actor.h  m_berserk.c  m_berserk.h  m_boss2.c  m_boss3.c  m_boss31.c  m_boss31.h  m_boss32.c  m_boss32.h  m_brain.c  (+43 more)
original/xatrix/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_berserk.c  m_berserk.h  m_boss2.c  m_boss2.h  m_boss31.c  m_boss32.c  m_boss5.c  m_brain.c  m_chick.c  m_fixbot.c  m_fixbot.h  m_flipper.h  m_float.c  m_float.h  m_flyer.c  m_flyer.h  m_gekk.c  m_gekk.h  m_gladb.c  m_gladiator.c  (+30 more)
rerelease/: .gitignore  CMakeLists.txt  bg_local.h  cg_screen.cpp  g_ai.cpp  g_chase.cpp  g_cmds.cpp  g_func.cpp  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_save.cpp  g_spawn.cpp  g_target.cpp  g_trigger.cpp  g_turret.cpp  g_utils.cpp  g_weapon.cpp  game.h  game.vcxproj  game.vcxproj.filters  m_actor.cpp  m_arachnid.cpp  m_berserk.cpp  m_boss2.cpp  m_boss2.h  m_boss3.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_brain.h  m_chick.cpp  m_flash.h  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gladiator.cpp  (+32 more)
rerelease/action/: Makefile  Makefile.lcc  Makefile.wedit  a_cmds.c  a_ctf.c  a_ctf.h  a_dom.c  a_dom.h  a_doorkick.c  a_game.c  a_game.h  a_items.c  a_match.c  a_match.h  a_menu.c  a_menu.h  a_radio.h  a_team.c  a_team.h  a_tourney.c  a_tourney.h  a_vote.c  a_vote.h  a_xcmds.c  a_xcmds.h  a_xgame.c  a_xgame.h  a_xmenu.c  a_xmenu.h  a_xvote.c  a_xvote.h  cgf_sfx_glass.h  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_grapple.c  g_grapple.h  g_items.c  g_local.h  (+38 more)
rerelease/bots/: bot_debug.h  bot_exports.cpp  bot_exports.h  bot_think.cpp  bot_utils.cpp
rerelease/ctf/: g_ctf.cpp
rerelease/rogue/: g_rogue_combat.cpp  g_rogue_func.cpp  g_rogue_monster.cpp  g_rogue_newai.cpp  g_rogue_newdm.cpp  g_rogue_newtrig.cpp  g_rogue_newweap.cpp  g_rogue_spawn.cpp  g_rogue_utils.cpp  m_rogue_carrier.cpp  m_rogue_stalker.cpp  m_rogue_turret.cpp  m_rogue_widow.cpp  m_rogue_widow.h  m_rogue_widow2.cpp  m_rogue_widow2.h  rogue_dm_ball.cpp  rogue_dm_tag.cpp
rerelease/xatrix/: g_xatrix_misc.cpp  m_xatrix_fixbot.cpp  m_xatrix_gekk.cpp  p_xatrix_weapon.cpp
